@@ -181,6 +181,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16828: Fix error incorrectly raised by bz2.compress(''). Patch by
+  Martin Packman.
+
 - Issue #16819: IDLE method completion now correctly works for unicode literals.
 
 - Issue #9586: Redefine SEM_FAILED on MacOSX to keep compiler happy.
